--- a/app/components/modal/modal.module.css
+++ b/app/components/modal/modal.module.css
@@ -1,10 +1,10 @@
 .modalOverlay {
   position: fixed;
-  z-index: 1000;
+  z-index: 999999;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,11 +35,11 @@
   position: absolute;
   top: 10px;
   right: 15px;
-  color: #aaa;
+  color: #fffdf6;
 }
 
 .closeButton:hover,
 .closeButton:focus {
-  color: black;
+  color: #12263a;
   text-decoration: none;
 }
